<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:padding="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/athlete_facts"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:padding="12dp"
        android:textStyle="bold"
        />

    <!--FACTS ABOUT THE ATHLETES -->
    <TextView
        android:id="@+id/facts_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        tools:text = "@string/facts_neymar"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@color/colorWhite"
        >

    </TextView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        >


        <Button
            android:id="@+id/neymar_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/neymar"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            >
        </Button>

        <Button
            android:id="@+id/lebron_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lebron_james"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:layout_marginTop="5dp"
            >
        </Button>


        <Button
            android:id="@+id/messi_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lionel_messi"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:layout_marginTop="5dp"

            >
        </Button>

        <Button
            android:id="@+id/kobe_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kobe_button"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:layout_marginTop="5dp"

            >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/show_results_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text = "@string/show_results_text"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            >


        </Button>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/next_athlete"
            android:padding="10dp">
        </Button>


    </LinearLayout>



</LinearLayout>